# rtail_kafka

./: Cargo.toml  README.md  Read.me
releases/: rtail_kafka
src/: main.rs
